<resources>
    <string name="app_name">ASER Test</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="Hindi">Hindi</string>
    <string name="English">English</string>
    <string name="Marathi">Marathi</string>
    <string name="Math">Math</string>

    <string name="Beginner">Beginner</string>
    <string name="TestWasNotComplete">Test was not complete</string>

    <!--LANGUAGE-->
    <string name="WordNative">Word</string>
    <string name="Story">Story</string>
    <string name="Paragraph">Paragraph</string>
    <string name="Letter">Letter</string>
    <!--MATH-->
    <string name="Subtraction">Subtraction</string>
    <string name="Division">Division</string>
    <string name="tenToNinetyNine">Double digit</string>
    <string name="oneToNine">Single digit</string>
    <!--ENGLISH-->
    <string name="Capitalletter">Capital letter</string>
    <string name="Smallletter">Small letter</string>
    <string name="word">word</string>
    <string name="Sentence">Sentence</string>

    <string name="Upper_Limit_reached">Upper Limit reached</string>
    <string name="yellow">Test</string>
    <string name="red">Validate</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="Edit">Edit</string>
    <string name="Continue">Continue</string>
    <string name="native_proficiency">Native</string>
    <string name="math_proficiency">Math</string>
    <string name="english_proficiency">English</string>

    <!--

        &lt;!&ndash;Tab heading Tittle&ndash;&gt;
        <string name="n_wordsTittle">Words</string>
        <string name="n_storyTittle">Story</string>
        <string name="n_paraTittle">Paragraph</string>
        <string name="n_letterTittle">Letters</string>
        &lt;!&ndash;MATH&ndash;&gt;
        <string name="m_subtractionTittle">Subtraction</string>
        <string name="m_divisionTittle">Division</string>
        <string name="m_doubleTittle">Double digit</string>
        <string name="m_singleTittle">Single digit</string>
        &lt;!&ndash;ENGLISH&ndash;&gt;
        <string name="e_capitalTittle">Capital</string>
        <string name="e_smallTittle">Small</string>
        <string name="e_wordTittle">word</string>
        <string name="e_sentenceTittle">Sentence</string>
    -->

    `

    <string-array name="india_states">
        <item>SELECT STATE</item>
        <item>Andhra Pradesh(AP)</item>
        <item>Arunachal Pradesh(AR)</item>
        <item>Assam(AS)</item>
        <item>Bihar(BR)</item>
        <item>Chhattisgarh(CG)</item>
        <item>Goa(GA)</item>
        <item>Gujarat(GJ)</item>
        <item>Haryana(HR)</item>
        <item>Himachal Pradesh(HP)</item>
        <item>Jammu and kashmir(JK)</item>
        <item>Jharkhand(JH)</item>
        <item>Karnataka(KN)</item>
        <item>Kerala(KL)</item>
        <item>Madhya Pradesh(MP)</item>
        <item>Maharashtra(MH)</item>
        <item>Manipur(MN)</item>
        <item>Meghalaya(ML)</item>
        <item>Mizoram(MZ)</item>
        <item>Nagaland(NL)</item>
        <item>Orissa(OD)</item>
        <item>Punjab(PB)</item>
        <item>Rajasthan(RJ)</item>
        <item>Sikkim(SK)</item>
        <item>Tamil Nadu(TN)</item>
        <item>Telangana(TS)</item>
        <item>Tripura(TR)</item>
        <item>Uttarakhand(UK)</item>
        <item>Uttar Pradesh(UP)</item>
        <item>West Bengal(WB)</item>
        <item>Andaman and Nicobar Islands(AN)</item>
        <item>Chandigarh(CH)</item>
        <item>Dadra and Nagar Haveli(DH)</item>
        <item>Daman and Diu(DD)</item>
        <item>Delhi(DL)</item>
        <item>Lakshadweep(LD)</item>
        <item>Pondicherry(PY)</item>
    </string-array>

    <string-array name="india_states_shortcode">
        <item>SELECT STATE</item>
        <item>AP</item>
        <item>AR</item>
        <item>AS</item>
        <item>BR</item>
        <item>CG</item>
        <item>GA</item>
        <item>GJ</item>
        <item>HR</item>
        <item>HP</item>
        <item>JK</item>
        <item>JH</item>
        <item>KN</item>
        <item>KL</item>
        <item>MP</item>
        <item>MH</item>
        <item>MN</item>
        <item>ML</item>
        <item>MZ</item>
        <item>NL</item>
        <item>OD</item>
        <item>PB</item>
        <item>RJ</item>
        <item>SK</item>
        <item>TN</item>
        <item>TS</item>
        <item>TR</item>
        <item>UK</item>
        <item>UP</item>
        <item>WB</item>
        <item>AN</item>
        <item>CH</item>
        <item>DH</item>
        <item>DD</item>
        <item>DL</item>
        <item>LD</item>
        <item>PY</item>
    </string-array>

    <string-array name="class_of_child">
        <item>"select class"</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="math_prof">
        <item>Subtraction</item>
        <item>Division</item>
        <item>Double digit</item>
        <item>Single digit</item>
        <item>Beginner</item>
        <item>Test was not complete</item>
    </string-array>

    <string-array name="eng_prof">
        <item>Capital letter</item>
        <item>Small letter</item>
        <item>word</item>
        <item>Sentence</item>
        <item>Beginner</item>
        <item>Test was not complete</item>
    </string-array>

    <string-array name="native_prof">
        <item>Word</item>
        <item>Story</item>
        <item>Paragraph</item>
        <item>Letter</item>
        <item>Beginner</item>
        <item>Test was not complete</item>
    </string-array>

    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_out">Sign Out</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="signed_in">Signed In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="title_activity_otp_login">OtpLoginActivity</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="verify_sign_in"><![CDATA[Verify & Sign in]]></string>
    <string name="otp_login">OTP login</string>
</resources>
